--- a/views/index.html
+++ b/views/index.html
@@ -57,9 +57,9 @@
       	  <div class="pull-right">
       	    <input class="btn btn-default" type="submit" ng-click="sendJob()" value="Save" />
       	  </div>
-      	  <div ng-show="job.problem"  class="alert alert-warning" role="alert">{{job.problem}}<div>
+      	  <div ng-show="job.problem"  class="alert alert-warning" role="alert">{{job.problem}}</div>
       	</form>
     	</div>
-   </div>
+    </div>
   </body>
 </html>
